# tabby-config-sync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_ZH.md  docker-compose.yml  main.py  pyproject.toml  settings.py
.github/workflows/: build_and_push.yaml
application/: __init__.py  auth.py  jwt.py  models.py
application/routers/: __init__.py  token.py
application/routers/v1/: __init__.py  configs.py  users.py
frontend/: .gitignore  README.md  index.html  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: ConfigDetailModal.vue  ConfigList.vue  EditProfileModal.vue  TokenDisplay.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/views/: DashboardView.vue  LoginView.vue  RegisterView.vue
